--- a/app/assets/stylesheets/estilo.css
+++ b/app/assets/stylesheets/estilo.css
@@ -41,10 +41,11 @@ div.field
 div.imagem
 {
  position: fixed;
- top: 50px;
+ top: 120px;
  left: 0px;
- width: 50px;
- height: 50px;
+ width: 230px;
+ height: 210px;
+ border: 3px solid #73AD21;
 }
 div.links
 {
