--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,19 +1,5 @@
-  <%= form_for @user do |f| %>
-              <% if @user.errors.any? %>
-              <div id="error_explanation">
-                          <div class="alert-error">
-                                     O formulário contém <%= pluralize(@user.errors.count, "erro") %>.
-                          </div>
-                          <ul>
-                                     <% @user.errors.full_messages.each do |msg| %>
-                                        <li><%= msg %></li>
-                                     <% end %>
-                          </ul>
-              </div>
-  <% end %>
-            <div class="criarlogin">
-              <p><h1>Criando Login</h1></p>
-                <table>
+<%= form_for @user do |f| %>
+<table>
                 <tr>
                   <td><%= f.label :tipoCadastro %></td>
                   <td><%= f.radio_button :tipoCadastro, 'Profissional', :checked => true %> <%= "Profissional"%>
@@ -43,19 +29,10 @@
                   <td><%= f.label :image %></td>
                   <td><%= f.file_field :image, class: 'form-control' %></td>
                 </tr>
-                <tr>
-                  <td><%= f.label :password %></td>
-                  <td><%= f.password_field :password %></td>
-                </tr>
-                <tr>
-                  <td><%= f.label :password_confirmation %></td>
-                  <td><%= f.password_field :password_confirmation %></td>
-                </tr>
-                <tr>
+                <tr>  
                   <td></td>
                   <td></td>
-                  <td><%= f.submit "Cadastrar"%></td>
+                  <td><%= f.submit "Alterar"%></td>
                 </tr>
-              </table>
-            </div>
-  <% end %>
+</table>
+<%end%>
